[package]
name = "n_m3u8dl-re-gui"
version = "1.0.0"
edition = "2024"

[dependencies]
iced = { version = "0.14", features = ["tokio"] }
rfd = { version = "0.17", features = ["common-controls-v6"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
arboard = "3"
encoding_rs = "0.8"

[build-dependencies]
winresource = "0.1"
